--- a/.svelte-kit/output/prerendered/pages/service.html
+++ b/.svelte-kit/output/prerendered/pages/service.html
@@ -7,10 +7,10 @@
 		
 		<link href="./_app/immutable/assets/0.76a8c144.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/6.6366e85e.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.cb04cf41.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f68c507b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1a072049.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.93d971c6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9ea632dc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.57ac7f54.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.10baf253.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.ea9b0236.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/6.258f8b92.js">
@@ -276,7 +276,7 @@
 			
 			<script>
 				{
-					__sveltekit_gdshdk = {
+					__sveltekit_di1var = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -286,8 +286,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.cb04cf41.js"),
-						import("./_app/immutable/entry/app.93d971c6.js")
+						import("./_app/immutable/entry/start.f68c507b.js"),
+						import("./_app/immutable/entry/app.57ac7f54.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
